...
                                                            </label>
                                                        </subviews>
                                                    </stackView>
                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="80" translatesAutoresizingMaskIntoConstraints="NO" id="ByY-YI-DeH">
                                                        <rect key="frame" x="0.0" y="48.5" width="347" height="48.5"/>
                                                        <subviews>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Age" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="SqQ-O7-N9F">
                                                                <rect key="frame" x="0.0" y="0.0" width="133.5" height="48.5"/>
                                                                <fontDescription key="fontDescription" name="PokemonSolidNormal" family="Pokemon Solid" pointSize="20"/>
                                                                <color key="textColor" name="darkModeBackgrounds"/>
                                                                <nil key="highlightedColor"/>
                                                            </label>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="25" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="rxL-BE-zvJ">
...
                            <constraint firstAttribute="trailing" secondItem="3oe-uT-FbR" secondAttribute="trailing" id="Hes-DY-bHL"/>
                            <constraint firstItem="fk3-mF-Mvp" firstAttribute="bottom" secondItem="3oe-uT-FbR" secondAttribute="bottom" id="PRh-ah-49Q"/>
                            <constraint firstItem="3oe-uT-FbR" firstAttribute="top" secondItem="fk3-mF-Mvp" secondAttribute="top" id="fmy-OH-jTi"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Info" id="7uJ-Pb-KMC">
                        <barButtonItem key="leftBarButtonItem" title="Item" image="chevron.backward" catalog="system" id="FfP-pl-ok7">
                            <color key="tintColor" name="darkModeSetNavBar"/>
                            <connections>
                                <action selector="backButtonPressed:" destination="ZIK-xf-tnO" id="Muz-c1-BbI"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tte-vN-J9U">
                                                        <rect key="frame" x="20" y="10" width="374" height="111"/>
                                                        <color key="backgroundColor" red="0.78523892159999997" green="0.84106075759999999" blue="0.89469844099999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <state key="normal" title="Button"/>
                                                        <buttonConfiguration key="configuration" style="plain" title="Browse Pokedex">
                                                            <fontDescription key="titleFontDescription" type="system" pointSize="25"/>
                                                        </buttonConfiguration>
                                                        <connections>
                                                            <action selector="pokedexButtonClicked:" destination="aLL-oD-Ysn" eventType="touchUpInside" id="a7x-lI-8R4"/>
                                                        </connections>
                                                    </button>
...
                                        <rect key="frame" x="157" y="0.0" width="100" height="40"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="100" id="qHN-A0-kdt"/>
                                            <constraint firstAttribute="height" constant="40" id="vLy-W3-yF3"/>
                                        </constraints>
                                    </imageView>
                                    <searchBar contentMode="redraw" placeholder="Search: Pokemon Name/ID" translatesAutoresizingMaskIntoConstraints="NO" id="UgS-fc-Rwy">
                                        <rect key="frame" x="0.0" y="42" width="414" height="368"/>
                                        <color key="backgroundColor" name="darkModeSetNavBar"/>
                                        <color key="tintColor" name="darkModeSetNavBar"/>
                                        <color key="barTintColor" name="darkModeBackgrounds"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </searchBar>
...
