...
    // MARK: - Pokemon is not in any game
    
    func noGames() {
        
        loadBlur()
        
        let alertController = UIAlertController(title: "Oh No!", message:
                                                    "", preferredStyle: .alert)
        alertController.addAction(UIAlertAction(title: "Return", style: .default, handler:  { action -> Void in
            self.returnToPreviousScreen()
        }))
        alertController.message = chosenPokemon!.name.capitalizingFirstLetter() + " does not feature in any game."
        
        self.present(alertController, animated: true, completion: nil)
    }
...
